# zena

./: .gitignore  docker-compose.yml  referencia.xlsx
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 002_add_case_fields_and_design_json.py  003_add_location_sector_and_case_ordinal_text.py  004_add_comment_updated_at.py  c248d10c8554_initial_schema.py
backend/src/zena/api/: app.py  dependencies.py  middleware.py
backend/src/zena/api/routes/: auth.py  cases.py  dashboard.py  locations.py  persons.py  reports.py  stage_statuses.py  stages.py  users.py
backend/src/zena/application/: dto.py
backend/src/zena/application/use_cases/: auth.py  cases.py  dashboard.py  locations.py  persons.py  reports.py  stage_statuses.py  stages.py  users.py
backend/src/zena/domain/: enums.py  exceptions.py  models.py  ports.py
backend/src/zena/infrastructure/: config.py  di.py  seed.py
backend/src/zena/infrastructure/auth/: jwt_service.py
backend/src/zena/infrastructure/persistence/: database.py  models.py  repositories.py
frontend/: Dockerfile  biome.json  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/lib/: api.ts  case-flow.ts  stage-metadata-overrides.ts  use-debounced-value.ts  use-permissions.ts
frontend/src/pages/: case-detail.tsx  cases.tsx  dashboard.tsx  locations.tsx  login.tsx  persons.tsx  report-generate.tsx  reports.tsx  settings.tsx  users.tsx
frontend/src/stores/: auth-store.ts
frontend/src/types/: index.ts
(+26 files in other folders)
